# quantum-os-

./: .env.exemple  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py
alembic/: env.py
backend/quantum_os/: main.py
backend/quantum_os/api/v1/: optimization.py
backend/quantum_os/core/: config.py  exceptions.py  loggging.py  logging.py
backend/quantum_os/domain/optimization/: engine.py  problem.py  solver.py
backend/quantum_os/domain/optimization/solvers/: ortools_solver.py  simulated_annealing.py
backend/quantum_os/infrastructure/database/: base.py  session.py
