[tool.poetry]
name = "quantum-os"
version = "0.1.0"
description = "AI-Powered Operating System with Quantum Optimization"
authors = [" makrem <snoussimakrem6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"